Correction animations - Text overflow - version final

--- a/sources/css/restaurants.css
+++ b/sources/css/restaurants.css
@@ -97,6 +97,27 @@ header img {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
+.button_order {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: medium;
+  margin: 50px auto;
+  border: none;
+  padding: 15px;
+  width: 200px;
+  border-radius: 25px;
+  color: white;
+  background: linear-gradient(#FF79DA -25%, #9356DC);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  transition: all 200ms;
+}
+.button_order:hover {
+  filter: brightness(1.15);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
 /* Heart container */
 .empty-heart {
   color: black;
