--- a/sources/sass/global.scss
+++ b/sources/sass/global.scss
@@ -100,6 +100,27 @@ header {
   }
 }
 
+.button_order {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: $main-font;
+  font-size: medium;
+  margin: 50px auto;
+  border: none;
+  padding: 15px;
+  width: 200px;
+  border-radius: 25px;
+  color: white;
+  background: linear-gradient($secondary-color -25%, $primary-color);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  transition: all 200ms;
+  &:hover {
+    filter: brightness(1.15);
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
+  }
+}
+
 /* Heart container */
 
 .empty-heart {
